Fixing horizontal scroll.

--- a/assets/src/css/components/_typography.scss
+++ b/assets/src/css/components/_typography.scss
@@ -88,7 +88,7 @@ pre {
   border: 1px dashed var(--color-alpha3);
   display: block;
   min-width: 100%;
-  max-width: 80vw;
+  max-width: 60ch;
   overflow-x: auto;
 
   code {
